--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 
-    compile "org.grails.plugins:grails-spring-websocket:2.3.0"
+    compile "org.grails.plugins:grails-spring-websocket:2.4.0.BUILD-SNAPSHOT"
 }
 
 bootRun {
